# future-core

./: CMakeLists.txt  README.md  future.doxygen.in  futureio.version.in  futureio_build.sh
CMakeModules/: FindWasm.cmake  MASSigning.cmake  UltrainioBuildTester.cmake.in  UltrainioTester.cmake.in  doxygen.cmake  installer.cmake  wasm.cmake
base/: CMakeLists.txt
base/src/: StringUtils.cpp
consensus/rpos/: CMakeLists.txt
consensus/rpos/include/rpos/: BlockMsgPool.h  Config.h  EvilBlsDetector.h  EvilDDosDetector.h  EvilMultiProposeDetector.h  EvilMultiVoteDetector.h  FisherYates.h  Genesis.h  MsgBuilder.h  MsgMgr.h  NativeTrx.h  Node.h  NodeInfo.h  Proof.h  PunishMgr.h  RoleRandom.h  RoleSelection.h  RoundInfo.h  Scheduler.h  Seed.h  StakeVoteBase.h  StakeVoteFactory.h  StakeVoteRandom.h  StakeVoteVrf.h  SyncTask.h  Utils.h  VoterSet.h  Vrf.h
consensus/rpos/src/: BlockMsgPool.cpp  Config.cpp  EvilBlsDetector.cpp  EvilDDosDetector.cpp  EvilMultiProposeDetector.cpp  EvilMultiVoteDetector.cpp  FisherYates.cpp  Genesis.cpp  MsgBuilder.cpp  MsgMgr.cpp  NativeTrx.cpp  Node.cpp  NodeInfo.cpp  Proof.cpp  PunishMgr.cpp  RoleRandom.cpp  RoleSelection.cpp  Scheduler.cpp  Seed.cpp  StakeVoteBase.cpp  StakeVoteFactory.cpp  StakeVoteRandom.cpp  StakeVoteVrf.cpp  SyncTask.cpp  Utils.cpp  VoterSet.cpp  Vrf.cpp
contracts/: CMakeLists.txt
contracts/ZkpDemo/: README.md  ZkpDemo.ts
contracts/economic/: CMakeLists.txt  economic.abi  economic.cpp
contracts/futureio.bank/: CMakeLists.txt  futureio.bank.abi  futureio.bank.cpp  futureio.bank.hpp
contracts/futureio.msig/: CMakeLists.txt  README.md  futureio.msig.abi  futureio.msig.cpp  futureio.msig.hpp
contracts/futureio.rand/: CMakeLists.txt  futureio.rand.ts  futureio.rand.wasm.m  futureio.rand.wast.t  random.ts
contracts/futureio.res/: CMakeLists.txt  expire_check.cpp  futureio.res.abi  futureio.res.cpp  futureio.res.hpp
contracts/futureio.system/: CMakeLists.txt  block_header_ext_key.h  committee_delta.h  committee_info.h  committee_set.h  confirm_point.h  delegate.cpp  futureio.system.abi  futureio.system.cpp  futureio.system.hpp  native.hpp  producer.cpp  reward.cpp  scheduler.cpp  synctransaction.cpp
contracts/futureio.token/: CMakeLists.txt  futureio.token.abi  futureio.token.cpp  futureio.token.hpp
contracts/futureiolib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  block_header.hpp  chain.h  committee_info.hpp  compiler_builtins.h  contract.hpp  contracts.dox  core_symbol.hpp  core_symbol.hpp.in  crypto.h  currency.hpp  datastream.hpp  db.h  dispatcher.hpp  fixed_key.hpp  fixedpoint.hpp  futureio.hpp  futureiolib.cpp  memory.h  memory.hpp  merkle_proof.hpp  multi_index.hpp  name_ex.hpp  optional.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.hpp  public_key.hpp  reflect.hpp  rpc.dox  serialize.hpp  singleton.hpp  symbol.hpp  system.h  time.hpp  (+6 more)
contracts/hello/: CMakeLists.txt  hello.abi  hello.cpp  hello_rc.md
contracts/merkle_proof/: CMakeLists.txt  merkle_proof.abi  merkle_proof.cpp
contracts/multi_index_test/: CMakeLists.txt  multi_index_test.abi  multi_index_test.cpp
contracts/musl/: CMakeLists.txt
contracts/stltest/: CMakeLists.txt  stltest.abi  stltest.cpp
contracts/test.inline/: CMakeLists.txt  test.inline.cpp  test.inline.hpp
contracts/test_api/: CMakeLists.txt  test_action.cpp  test_api.cpp  test_api.hpp  test_api_common.hpp  test_chain.cpp  test_checktime.cpp  test_compiler_builtins.cpp  test_crypto.cpp  test_datastream.cpp  test_fixedpoint.cpp  test_permission.cpp  (+3 more)
core/: CMakeLists.txt
core/include/core/: BlsVoterSet.h  EchoBlsEvidence.h  Evidence.h  EvidenceFactory.h  ExtType.h  Message.h  MultiProposeEvidence.h  MultiVoteEvidence.h  NullEvidence.h  SerializedEchoMsg.h  net_kcp_plugin_base.hpp  protocol.hpp  types.h  utils.h
core/src/: BlsVoterSet.cpp  EchoBlsEvidence.cpp  Evidence.cpp  EvidenceFactory.cpp  ExtType.cpp  Message.cpp  MultiProposeEvidence.cpp  MultiVoteEvidence.cpp  NullEvidence.cpp  SerializedEchoMsg.cpp  utils.cpp
crypto/: CMakeLists.txt
kcp/: CMakeLists.txt
lightclient/: CMakeLists.txt
lightclient/include/lightclient/: BlockHeaderExtKey.h  CheckPoint.h  CommitteeDelta.h  CommitteeInfo.h  CommitteeSet.h  ConfirmPoint.h  EpochEndPoint.h  Helper.h  LightClient.h  LightClientCallback.h  LightClientMgr.h  LightClientProducer.h  StartPoint.h
lightclient/src/: CheckPoint.cpp  CommitteeDelta.cpp  CommitteeInfo.cpp  CommitteeSet.cpp  ConfirmPoint.cpp  EpochEndPoint.cpp  Helper.cpp  LightClient.cpp  LightClientCallback.cpp  LightClientMgr.cpp  LightClientProducer.cpp
p2p/: CMakeLists.txt
p2p/include/p2p/: Common.h  NodeTable.h  UDP.h  UPnP.h
p2p/src/: NodeTable.cpp  UPnP.cpp
plugins/: futureio-make_new_plugin.sh
plugins/monitor_plugin/: CMakeLists.txt  httpc_only_send.cpp  httpc_only_send.hpp  monitor_plugin.cpp
plugins/monitor_plugin/include/futureio/monitor_plugin/: monitor_plugin.hpp  runtime_os_info.hpp  uranus_controller_monitor.hpp  uranus_node_monitor.hpp
plugins/producer_rpos_plugin/: CMakeLists.txt  producer_rpos_plugin.cpp
plugins/producer_rpos_plugin/include/futureio/producer_rpos_plugin/: producer_rpos_plugin.hpp
programs/: CMakeLists.txt
programs/cryfuture/: CMakeLists.txt  main.cpp
programs/kfutured/: CMakeLists.txt  main.cpp
scripts/: _runfuture.sh  account_info.py  bios-test.py  futureio_build_darwin.sh  generateconfig.py  restart_all_future.sh  start_all_future.sh  stop_all_future.sh  template_orig.txt
tests/: reg_event_test.py  unreg_event_test.py
tools/: BlsKeyPairGenerator.cpp  CMakeLists.txt  CommitteeSkGenerator.cpp  utrcmd.py  utrnewacc.py  ws2json.cpp
unittests/: CMakeLists.txt
(+157 files in other folders)
